<resources>
    <string name="app_name" translatable="false">Addressbook</string>

    <string name="action_settings">SETTINGS</string>
    <string name="action_logout">LOGOUT</string>
    <string name="action_about">ABOUT</string>
    <string name="action_sort_settings">SORT SETTINGS</string>
    <string name="action_edit_organization">EDIT ORGANIZATION</string>
    <string name="action_share_person">SHARE PERSON</string>
    <string name="action_create">CREATE</string>
    <string name="action_add_contact">ADD CONTACT</string>
    <string name="action_apply_contact_changes">APPLY CHANGES</string>
    <string name="action_search">Search</string>
    <string name="action_filter">FILTER</string>
    <string name="person_header">GENERAL INFORMATION</string>
    <string name="contacts_header">CONTACTS</string>
    <string name="documents_header">DOCUMENTS</string>
    <string name="action_save_changes">SAVE</string>
    <string name="action_delete_contact">DELETE CONTACT</string>
    <string name="login_action">LOGIN</string>
    <string name="login_button">LOGIN</string>
    <string name="password_action">PASSWORD</string>
    <string name="no_value_placeholder">No value</string>
    <string name="search_org_id" translatable="false">ID</string>
    <string name="search_org_name">NAME</string>
    <string name="search_org_address">ADDRESS</string>
    <string name="search_org_zip">ZIP</string>
    <string name="search_org_type">TYPE</string>
    <string name="search_org_last_updated">LAST UPDATED</string>
    <string name="search_contact_id" translatable="false">ID</string>
    <string name="search_contact_data">DATA</string>
    <string name="search_contact_desc">DESCRIPTION</string>
    <string name="search_contact_type">TYPE</string>
    <string name="search_org_obj_id" translatable="false">id</string>
    <string name="search_org_obj_name" translatable="false">name</string>
    <string name="search_org_obj_address" translatable="false">street</string>
    <string name="search_org_obj_zip" translatable="false">zip</string>
    <string name="search_org_obj_type" translatable="false">type</string>
    <string name="search_org_obj_last_updated" translatable="false">lastUpdated</string>
    <string name="search_org_last_updated_comp">COMPARATOR</string>
    <string name="title_activity_settings">SETTINGS</string>
    <string name="search_person_id" translatable="false">ID</string>
    <string name="search_person_first_name">FIRST NAME</string>
    <string name="search_person_last_name">LAST NAME</string>
    <string name="search_person_resume">RESUME</string>
    <string name="search_person_salary">SALARY</string>
    <string name="search_person_salary_currency">CURRENCY</string>
    <string name="search_person_obj_id" translatable="false">id</string>
    <string name="search_person_obj_first_name" translatable="false">firstName</string>
    <string name="search_person_obj_last_name" translatable="false">lastName</string>
    <string name="search_person_obj_resume" translatable="false">resume</string>
    <string name="search_person_obj_salary" translatable="false">salary</string>
    <string name="organizations">ORGANIZATIONS</string>
    <string name="persons">PERSONS</string>
    <string name="add_new_organization">ADD NEW ORGANIZATION</string>
    <string name="add_new_contact">ADD NEW CONTACT</string>
    <string name="add_new_person">ADD NEW PERSON</string>
    <string name="choose_organization_type">CHOOSE ORGANIZATION TYPE</string>
    <string name="choose_salary_currency">CHOOSE SALARY CURRENCY</string>
    <string name="choose_date_comparator">CHOOSE DATE COMPARATOR</string>
    <string name="choose_contact_type">CHOOSE CONTACT TYPE</string>
    <string name="choose_sort_field">CHOOSE SORTING FIELD</string>
    <string name="choose_sort_order">CHOOSE SORTING ORDER</string>
    <string name="empty_list_message">NO DATA</string>
    <string name="empty_contact_list_message">NO CONTACTS</string>
    <string name="empty_documents_list_message">NO DOCUMENTS</string>
    <string name="general_header">GENERAL</string>
    <string name="server_url">SERVER URL</string>
    <string name="drawer_opened">OPENED</string>
    <string name="drawer_closed">CLOSED</string>
    <string name="auth_failure_message">WRONG LOGIN OR PASSWORD</string>
    <string name="forbidden_message">WRONG LOGIN OR PASSWORD</string>
    <string name="server_timeout_message">SERVER CONNECTION TIMEOUT</string>
    <string name="organization_type_non_profit">Non profit</string>
    <string name="organization_type_private">Private</string>
    <string name="organization_type_government">Government</string>
    <string name="organization_type_public">Public</string>
    <string name="sort_order_asc">ASCENDING</string>
    <string name="sort_order_desc">DESCENDING</string>
    <string name="validation_error_required_field">REQUIRED FIELD</string>
    <string name="validation_error_value_too_long">VALUE IS TOO LONG</string>
    <string name="changes_saved_message">CHANGES SAVED</string>
    <string name="person_created_message">PERSON CREATED</string>
    <string name="organization_created_message">ORGANIZATION CREATED</string>
    <string name="delete_contact_confirmation">DELETE THIS CONTACT?</string>
    <string name="contact_type_mobile_phone">Mobile phone</string>
    <string name="contact_type_home_phone">Home phone</string>
    <string name="contact_type_address">Address</string>
    <string name="contact_type_email">E-mail</string>
    <string name="service_info_version">VERSION:</string>
    <string name="service_info_build_date">BUILD:</string>
    <string name="service_info_server_host">SERVER HOST:</string>
    <string name="service_info_server_url">SERVER:</string>
    <string name="list_footer_from">From</string>
    <string name="list_footer_to">to</string>
    <string name="list_footer_total">total</string>
    <string name="contact_deletion_cancel">CANCEL</string>
    <string name="contact_deletion_delete">DELETE</string>
    <string name="comparator_equal">Equal</string>
    <string name="comparator_more">More</string>
    <string name="comparator_more_or_equal">More Or Equal</string>
    <string name="comparator_less">Less</string>
    <string name="comparator_less_or_equal">Less Or Equal</string>
    <string name="comparator_not_equal">Not Equal</string>
    <string name="app_info_version">VERSION</string>
    <string name="app_info_developer">DEVELOPER</string>
    <string name="app_info_author" translatable="false">Nikita Schneider</string>
    <string name="biometric_login_message">Log in using your biometric credential</string>
    <string name="regular_login_message">Use account password</string>
    <string name="biometric_login_title">Use biometric login for this app</string>
    <string name="biometric_login_title_question">Use biometric login for this app?</string>
    <string name="biometric_authentification_failed_message">Authentication failed</string>
    <string name="biometric_authentification_error_message">Authentication error:</string>
    <string name="server_url_empty_error">SET SERVER URL IN SETTINGS</string>
    <string name="downloading_failed_message">\nDOWNLOADING FAILED\nPLEASE TRY AGAIN</string>
    <string name="downloading_in_progress_message">\nDOWNLOADING IN PROGRESS</string>
    <string name="downloading_in_progress_notification">Downloading file</string>
    <string name="downloading_finished_message">\nFILE DOWNLOADED</string>
    <string name="download_action">DOWNLOAD</string>
    <string name="delete_document_dialog_header">DELETE THIS DOCUMENT?</string>
    <string name="deleted_document_notification">DELETED</string>
    <string name="document_open_action">OPEN</string>
    <string name="uploading_file_dialog_title">UPLOADING FILE</string>
    <string name="file_uploaded">\nFILE UPLOADED</string>
    <string name="file_uploading_failed">FILE UPLOADING FAILED</string>
    <string name="file_cannot_be_uploaded">FILE CAN NOT BE UPLOADED</string>
    <string name="record_already_locked_message">RECORD WAS ALREADY LOCKED</string>
    <string name="logout_confirmation">DO YOU WANT TO LOGOUT?</string>
</resources>